kubernetes-security-automation-architecture/k8s/privileged-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: privileged-test
  namespace: prod
spec:
  containers:
    - name: busybox
      image: busybox:latest
      command: ["sh", "-c", "sleep 3600"]
      securityContext:
        privileged: true
