kubernetes-security-automation-architecture/k8s/network-policy-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-from-prod
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: nginx
  ingress: []
  policyTypes:
  - Ingress
